; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_util.c_git__getenv.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_util.c_git__getenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ENOTFOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git__getenv(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i8* @getenv(i8* %7)
  store i8* %8, i8** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @git_buf_clear(i32* %9)
  %11 = load i8*, i8** %6, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %15, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* @GIT_ENOTFOUND, align 4
  store i32 %14, i32* %3, align 4
  br label %19

15:                                               ; preds = %2
  %16 = load i32*, i32** %4, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @git_buf_puts(i32* %16, i8* %17)
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %15, %13
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i8* @getenv(i8*) #1

declare dso_local i32 @git_buf_clear(i32*) #1

declare dso_local i32 @git_buf_puts(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
